# praisonaitestframework

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  CREATE_TEST_EXAMPLES.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  streamlit_app.py
.github/workflows/: test.yml
.streamlit/: secrets.toml.example
examples/: __init__.py
examples/basic-agent-test/: test_basic_agent.py
examples/mock-llm-test/: test_with_mocks.py
src/praisonai_test/: __init__.py  agent_test.py  assertions.py  cli.py  fixtures.py  mocks.py  reporter.py  runner.py
tests/: __init__.py  conftest.py  test_agent_test.py  test_assertions.py  test_mocks.py
